classDiagram
    %% Иерархия сущностей предметной области
    %% Открыть/отрендерить можно на https://mermaid.live или через mermaid-cli

    class entity {
        -code: int
        +getCode() int
        +setCode(value)
    }

    class namedentity {
        -name: str
        +getName() str
        +setName(value)
    }

    class client {
        -surname: str
        -secname: str
        -address: str
        -phone: str
        +getClientInfo() str
    }

    class route {
        -climate: str
        -duration: int
        -hotel: str
        -cost: int
    }

    class package {
        -date: str
        -quantity: int
        -discount: int
        -clients: list
        -routes: list
        +appendClient(value)
        +removeClient(value)
        +appendRoute(value)
        +removeRoute(value)
    }

    class airline {
        -flight_cost: int
    }

    class touroperator {
        -address: str
        -phone: str
        -website: str
    }

    class manager {
        -surname: str
        -secname: str
        -position: str
        -phone: str
        -email: str
        +getFullName() str
    }

    class payment {
        -package_code: int
        -date: str
        -amount: int
        -method: str
        -status: str
        +isPaid() bool
    }

    class package_ext {
        -airline_code: int
        -touroperator_code: int
        -manager_code: int
    }

    %% наследование
    entity <|-- namedentity
    entity <|-- package
    entity <|-- payment
    namedentity <|-- client
    namedentity <|-- route
    namedentity <|-- airline
    namedentity <|-- touroperator
    namedentity <|-- manager
    package <|-- package_ext

    %% связи M:N
    package "0..N" -- "0..N" client : участники
    package "0..N" -- "0..N" route : направления
